[tool.poetry]
name = "project-1-staroverov-m-25-555"
version = "0.1.0"
description = ""
authors = ["Maksim Staroverov <mstaroverov6@gmail.com>"]
readme = "README.md"
packages = [
    { include = "labyrinth_game" },
]

[tool.poetry.dependencies]
python = ">=3.13"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
project = "labyrinth_game.main:main"