[tool.poetry]
name = "project-1-staroverov-m-25-555"
version = "0.1.0"
description = ""
authors = ["Maksim Staroverov <mstaroverov6@gmail.com>"]
readme = "README.md"
packages = [
    { include = "labyrinth_game" },
]

[tool.poetry.dependencies]
python = ">=3.13"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
project = "labyrinth_game.main:main"

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
[dependency-groups]
dev = [
    "ruff (>=0.13.2,<0.14.0)"
]
